--- a/css/brandon.css
+++ b/css/brandon.css
@@ -62,7 +62,7 @@ article{color: ECAB21;
 .goodbye{ padding-left: 50px;
           font-size: 20px;
           list-style-type: none;}
-.night{ display:
+.night{ display:inline-block
 }
 /*<style>*/
    /*a img.Large { display: none; }*/
