--- a/css/brandon.css
+++ b/css/brandon.css
@@ -80,7 +80,8 @@ article{color: ECAB21;
       /*width="800" height="753"*/
       /*alt="Photoshop Enhancement" />*/
 /*</a>*/
-.123{padding-left: -100px;}
+.123{padding-left: -100px;
+list-style-type:none;}
 footer{
   background-color: 493627;
   color: ECAB21;
