--- a/css/brandon.css
+++ b/css/brandon.css
@@ -59,6 +59,7 @@ article{color: ECAB21;
       font-size: 20px;
       list-style-type: none;
 }
+.alicia{list-style-type: none;}
 .goodbye{ padding-left: 50px;
           font-size: 20px;
           list-style-type: none;}
