--- a/css/brandon.css
+++ b/css/brandon.css
@@ -59,7 +59,8 @@ article{color: ECAB21;
       font-size: 20px;
       list-style-type: none;
 }
-.alicia{list-style-type: none;}
+.alicia{list-style-type: none;
+        font-size:20px;}
 .goodbye{ padding-left: 50px;
           font-size: 20px;
           list-style-type: none;}
